src/test/ui/consts/match_ice.stderr
warning: to use a constant of type `S` in a pattern, `S` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match_ice.rs:11:9
   |
LL |         C => {}
   |         ^
   |
   = note: `#[warn(indirect_structural_match)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #62411 <https://github.com/rust-lang/rust/issues/62411>

error: to use a constant of type `S` in a pattern, `S` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match_ice.rs:11:9
   |
LL |         C => {}
   |         ^

error: aborting due to previous error; 1 warning emitted

